--- a/css/styles.css
+++ b/css/styles.css
@@ -228,8 +228,8 @@ video {
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
-  margin-bottom: 100px;
+  padding-bottom: 2.5rem;    
+  margin-bottom: 200px;
 }
 
 .card {
@@ -488,6 +488,67 @@ footer {
   color: #F4C430;
   text-align: center;
   border-top: 4px solid #F4C430;
+}
+
+/* General Form Styling */
+.contact-form {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #594835;
+}
+
+/* Form Group Styling */
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #333;
+}
+
+.form-group input,
+.form-group select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form-group input:focus,
+.form-group select:focus {
+  border-color: #594835;
+  outline: none;
+}
+
+/* Submit Button Styling */
+.form-group button {
+  width: 100%;
+  padding: 10px;
+  background-color: #594835;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-group button:hover {
+  background-color: #fab118;
 }
 
 
