--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,45 @@ body {
   color: #f9f9f9;
 }
 
+/* Reset & Styling */
+.nav-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 20px; 
+}
+
+.nav-links li {
+  position: relative;
+}
+
+.nav-links a {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px;
+  position: relative;
+  transition: color 0.3s ease-in-out;
+}
+
+/* Underline Effect on Nav Bar */
+.nav-links a::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: white; 
+  transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.nav-links a:hover::after {
+  width: 100%;
+  left: 0;
+}
+
+
 .language-buttons button,
 .phone-button {
   margin-left: 1rem;
@@ -181,7 +220,7 @@ hr {
   height: auto;
 }
 
-.footer-social a img{
+.footer-social a img {
   height: 35px;
   width: 35px;
 }
@@ -189,20 +228,23 @@ hr {
 /* Animated Logo */
 
 video {
-  width: 350px; 
-  height: auto; 
+  width: 350px;
+  height: auto;
   display: block;
-  margin: 0 auto; 
-  outline: 0px;}
+  margin: 0 auto;
+  outline: 0px;
+}
 
 /* Click Effect */
 .click-effect {
   position: absolute;
   width: 20px;
   height: 20px;
-  background: #f2e9dd; /* Light color for visibility */
+  background: #f2e9dd;
+  /* Light color for visibility */
   border-radius: 50%;
-  pointer-events: none; /* Prevent interaction */
+  pointer-events: none;
+  /* Prevent interaction */
   transform: scale(0);
   animation: clickAnimation 0.7s ease-out forwards;
   box-shadow: 0 0 20px #fbf496;
@@ -211,12 +253,13 @@ video {
 /* Animation */
 @keyframes clickAnimation {
   0% {
-      transform: scale(0);
-      opacity: 1;
+    transform: scale(0);
+    opacity: 1;
   }
+
   100% {
-      transform: scale(3);
-      opacity: 0;
+    transform: scale(3);
+    opacity: 0;
   }
 }
 
@@ -228,7 +271,7 @@ video {
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;    
+  padding-bottom: 2.5rem;
   margin-bottom: 200px;
 }
 
@@ -236,7 +279,8 @@ video {
   border: none;
 }
 
-.card-title, .card-text {
+.card-title,
+.card-text {
   text-align: center;
   font-size: 300%;
   margin-top: 50px;
@@ -244,7 +288,7 @@ video {
 
 .card.text-bg-dark {
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .card.text-bg-dark::before {
@@ -252,20 +296,84 @@ video {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5); /* Adjust opacity (0 = transparent, 1 = solid white) */
-  
+  background: rgba(255, 255, 255, 0.5);
+  /* Adjust opacity (0 = transparent, 1 = solid white) */
+
 }
 
 .content h2 {
   font-size: 50px;
+  color: #fab118;
+}
+
+@media (min-width: 0px) {
+  .content p {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 480px) {
+  .content h2 {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 767px) {
+  .content h2 {
+    font-size: 35px;
+  }
+}
+
+@media (min-width: 992px) {
+  .content h2 {
+    font-size: 50px;
+  }
 }
 
 .content p {
-  font-size: 13px;
+  font-size: 20px;
+  color: #594835;
+}
+
+@media (min-width: 0px) {
+  .content p {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 480px) {
+  .content p {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 767px) {
+  .content p {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 992px) {
+  .content p {
+    font-size: 17px;
+  }
 }
 
 .left .content a {
-  background-color: blue;
+  background-color: #e9d0af;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  display: inline-block;
+  border-radius: 15px;
+}
+
+.left .content a:hover {
+  background-color: #a96f35;
+  transform: scale(1.1);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 .section .left-title {
@@ -273,178 +381,189 @@ video {
 }
 
 
-.header, .footer {
-    background: #f2e9dd;
-    color: #fff;
-    padding: 30px;
-    text-align: center;
-    box-sizing: border-box;
+.header,
+.footer {
+  background: #f2e9dd;
+  color: #fff;
+  padding: 30px;
+  text-align: center;
+  box-sizing: border-box;
 }
 
-.header a, .footer a {
-    color: #fff;
+.header a,
+.footer a {
+  color: #fff;
 }
 
 @media (min-width: 768px) {
-    .header, .footer {
-        padding: 10px;
-    }
+
+  .header,
+  .footer {
+    padding: 10px;
+  }
 }
 
-.header h1, .footer h1 {
-    font-size: 4em;
-    font-weight: 300;
+.header h1,
+.footer h1 {
+  font-size: 4em;
+  font-weight: 300;
 }
 
-.header i.fa, .footer i.fa {
-    font-size: 4em;
+.header i.fa,
+.footer i.fa {
+  font-size: 4em;
 }
 
-.header .bounce, .footer .bounce {
-    animation-name: bounce;
-    transform-origin: center bottom;
-    animation-iteration-count: infinite;
-    animation-duration: 2s;
-    animation-fill-mode: both;
+.header .bounce,
+.footer .bounce {
+  animation-name: bounce;
+  transform-origin: center bottom;
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+  animation-fill-mode: both;
 }
 
 .section {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  position: relative;
 }
 
-.section .left, 
-.section .middle, 
+.section .left,
+.section .middle,
 .section .right {
-    width: 100%;
-    display: block;
-    color: #fff;
-    box-sizing: border-box;
-    left: 0;
-    padding: 30px;
-    text-align: center;
-    overflow: hidden;
-    transition: 0.3s ease-in-out all;
-    position: relative;
+  width: 100%;
+  display: block;
+  color: #fff;
+  box-sizing: border-box;
+  left: 0;
+  padding: 30px;
+  text-align: center;
+  overflow: hidden;
+  transition: 0.3s ease-in-out all;
+  position: relative;
 }
 
 @media (min-width: 480px) {
-    .section .left, 
-    .section .middle, 
-    .section .right {
-        width: 50%;
-        font-size: 0.9em;
-        padding: 10px;
-        float: left;
-        position: absolute;
-    }
+
+  .section .left,
+  .section .middle,
+  .section .right {
+    width: 50%;
+    font-size: 0.9em;
+    padding: 10px;
+    float: left;
+    position: absolute;
+  }
 }
 
 @media (min-width: 768px) {
-    .section .left, 
-    .section .middle, 
-    .section .right {
-        width: 33.33333%;
-        left: 33.33%;
-        padding: 10px;
-    }
+
+  .section .left,
+  .section .middle,
+  .section .right {
+    width: 33.33333%;
+    left: 33.33%;
+    padding: 10px;
+  }
 }
 
 @media (min-width: 992px) {
-    .section .left, 
-    .section .middle, 
-    .section .right {
-        padding: 30px;
-        font-size: 1em;
-    }
+
+  .section .left,
+  .section .middle,
+  .section .right {
+    padding: 30px;
+    font-size: 1em;
+  }
 }
 
-.section .left .content, 
-.section .middle .content, 
+.section .left .content,
+.section .middle .content,
 .section .right .content {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .section.animate .left {
-    left: 0;
+  left: 0;
 }
 
 @media (min-width: 480px) {
-    .section.animate .left {
-        left: 50%;
-    }
+  .section.animate .left {
+    left: 50%;
+  }
 }
 
 @media (min-width: 768px) {
-    .section.animate .left {
-        left: 0;
-    }
+  .section.animate .left {
+    left: 0;
+  }
 }
 
 .section.animate .right {
-    left: 0;
+  left: 0;
 }
 
 @media (min-width: 480px) {
-    .section.animate .right {
-        left: 50%;
-    }
+  .section.animate .right {
+    left: 50%;
+  }
 }
 
 @media (min-width: 768px) {
-    .section.animate .right {
-        left: 66.66%;
-    }
+  .section.animate .right {
+    left: 66.66%;
+  }
 }
 
 .section .title {
-    background: #f2e9dd;
-    border: 1px solid green;
+  background: #f2e9dd;
 }
 
 .section .title h2 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .section .title p {
-    line-height: 1.55em;
-    margin-bottom: 0.75em;
+  line-height: 1.55em;
+  margin-bottom: 0.75em;
 }
 
 .section .title .btn-primary {
-    color: #fff;
-    background: #cc442e;
-    padding: 10px;
-    text-decoration: none;
-    border-radius: 3px;
-    display: inline-block;
-    transition: 0.3s ease-in-out all;
+  color: #fff;
+  background: #cc442e;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 3px;
+  display: inline-block;
+  transition: 0.3s ease-in-out all;
 }
 
 .section .title .btn-primary:hover {
-    background: #b33c29;
+  background: #b33c29;
 }
 
 .section .tiles {
-    padding: 0;
-    background: #fff;
-    clear: both;
-    display: none;
-    float: none;
+  padding: 0;
+  background: #fff;
+  clear: both;
+  display: none;
+  float: none;
 }
 
 @media (min-width: 768px) {
-    .section .tiles {
-        display: block;
-    }
+  .section .tiles {
+    display: block;
+  }
 }
 
 .section .tiles img {
-  width: 100%; /* Take full width of container */
+  width: 100%;
+  /* Take full width of container */
   height: auto;
-  opacity: 0.7; /* Optional: keep grayscale & opacity effects */
+  opacity: 0.7;
+  /* Optional: keep grayscale & opacity effects */
   transition: 0.3s ease-in-out all;
   filter: grayscale(100%);
   display: block;
@@ -456,19 +575,20 @@ video {
 }
 
 .section .middle {
-    background: slategray;
-    z-index: 2;
-    padding: 0;
+  background: slategray;
+  z-index: 2;
+  padding: 0;
 }
 
 .section .middle img {
-    width: 100%;
-    height: auto;
-    display: block;
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .section .tiles img {
-  width: 100%; /* Take full container width */
+  width: 100%;
+  /* Take full container width */
   height: auto;
   opacity: 0.7;
   transition: 0.3s ease-in-out all;
@@ -553,27 +673,41 @@ footer {
 
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-20px);
-    }
-    60% {
-        transform: translateY(-10px);
-    }
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-20px);
+  }
+
+  60% {
+    transform: translateY(-10px);
+  }
 }
 
 @-webkit-keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        -webkit-transform: translateY(0);
-    }
-    40% {
-        -webkit-transform: translateY(-20px);
-    }
-    60% {
-        -webkit-transform: translateY(-10px);
-    }
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateY(-20px);
+  }
+
+  60% {
+    -webkit-transform: translateY(-10px);
+  }
 }
 
 
@@ -598,5 +732,3 @@ footer {
     margin-bottom: 10px;
   }
 }
-
-
